rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__two-imagebuttons__encoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: text_roundtrip
---
num_types: 1
num_instances: 2
chunks:
  - Inst:
      type_id: 0
      type_name: ImageButton
      object_format: 0
      referents:
        - 0
        - 1
  - Prop:
      type_id: 0
      prop_name: Active
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 0
      prop_name: AnchorPoint
      prop_type: Vector2
      values:
        - - 0
          - 0
        - - 0
          - 0
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: AutoButtonColor
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 0
      prop_name: AutoLocalize
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 0
      prop_name: AutomaticSize
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: BackgroundColor3
      prop_type: Color3
      values:
        - - 1
          - 1
          - 1
        - - 1
          - 1
          - 1
  - Prop:
      type_id: 0
      prop_name: BackgroundTransparency
      prop_type: Float32
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: BorderColor3
      prop_type: Color3
      values:
        - - 0.10588236
          - 0.16470589
          - 0.20784315
        - - 0.10588236
          - 0.16470589
          - 0.20784315
  - Prop:
      type_id: 0
      prop_name: BorderMode
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: BorderSizePixel
      prop_type: Int32
      values:
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: ClipsDescendants
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: Draggable
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: HoverImageContent
      prop_type: Content
      values:
        - None
        - None
  - Prop:
      type_id: 0
      prop_name: ImageColor3
      prop_type: Color3
      values:
        - - 1
          - 1
          - 1
        - - 1
          - 1
          - 1
  - Prop:
      type_id: 0
      prop_name: ImageContent
      prop_type: Content
      values:
        - Uri: "rbxasset://textures/ui/GuiImagePlaceholder.png"
        - Uri: "rbxasset://textures/ui/GuiImagePlaceholder.png"
  - Prop:
      type_id: 0
      prop_name: ImageRectOffset
      prop_type: Vector2
      values:
        - - 0
          - 0
        - - 0
          - 0
  - Prop:
      type_id: 0
      prop_name: ImageRectSize
      prop_type: Vector2
      values:
        - - 0
          - 0
        - - 0
          - 0
  - Prop:
      type_id: 0
      prop_name: ImageTransparency
      prop_type: Float32
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: LayoutOrder
      prop_type: Int32
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: Modal
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - ImageButton
        - ImageButton
  - Prop:
      type_id: 0
      prop_name: NextSelectionDown
      prop_type: Ref
      values:
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: NextSelectionLeft
      prop_type: Ref
      values:
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: NextSelectionRight
      prop_type: Ref
      values:
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: NextSelectionUp
      prop_type: Ref
      values:
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Position
      prop_type: UDim2
      values:
        - - - 0
            - 0
          - - 0
            - 0
        - - - 0
            - 0
          - - 0
            - 0
  - Prop:
      type_id: 0
      prop_name: PressedImageContent
      prop_type: Content
      values:
        - None
        - None
  - Prop:
      type_id: 0
      prop_name: RootLocalizationTable
      prop_type: Ref
      values:
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Rotation
      prop_type: Float32
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: ScaleType
      prop_type: Enum
      values:
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: Selectable
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 0
      prop_name: Selected
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: SelectionImageObject
      prop_type: Ref
      values:
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Size
      prop_type: UDim2
      values:
        - - - 0
            - 100
          - - 0
            - 100
        - - - 0
            - 100
          - - 0
            - 100
  - Prop:
      type_id: 0
      prop_name: SizeConstraint
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: SliceCenter
      prop_type: Rect
      values:
        - - - -1
            - -10
          - - 8
            - 9
        - - - 0
            - 1
          - - 5
            - 6
  - Prop:
      type_id: 0
      prop_name: SliceScale
      prop_type: Float32
      values:
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Style
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: TileSize
      prop_type: UDim2
      values:
        - - - 1
            - 0
          - - 1
            - 0
        - - - 1
            - 0
          - - 1
            - 0
  - Prop:
      type_id: 0
      prop_name: Visible
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 0
      prop_name: ZIndex
      prop_type: Int32
      values:
        - 1
        - 1
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
  - End
